[package]
name = "noife"
version = "0.1.0"
edition = "2021"
default-run = "nustup"

[[bin]]
name = "nustup"

[[bin]]
name = "locker"

[[bin]]
name = "nargo"

[[bin]]
name = "nalyzer"

[lib]
name = "playground_common"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.87", features = ["backtrace"] }
dashmap = "6.1.0"
libc = "0.2.158"
named-lock = "0.4.1"
tokio = { version = "1.40.0", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
